--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ markdown_extensions:
   - attr_list
   - md_in_html
 
+use_directory_urls: false
 plugins:
   - search: 
       lang: [zh, en]
@@ -74,11 +75,11 @@ plugins:
 extra_css:
   - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css
   - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css
-  - ./assets/css/custom.css
+  - assets/css/custom.css
   - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css
 
 extra_javascript:
-  - ./assets/javascripts/color.js
-  - ./assets/javascripts/katex.js
+  - assets/javascripts/color.js
+  - assets/javascripts/katex.js
   - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js
   - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js # 允许自动渲染数学公式
